uses itemsLoader for customer, warehouseparts, bikes and rolemanagements
